2008-11-19  Sergio Villar Senin  <svillar@igalia.com>

	* libtinymail-camel/tny-camel-mime-part.c
	(tny_camel_mime_part_decode_to_stream_default): 
	adds a reference to protect wrapper when decoding to a stream

2008-11-19  Jose Dapena Paz  <jdapena@igalia.com>

	* libtinymail-camel/camel-lite/camel/providers/imap/camel-imap-folder.c:
	Remove calls to camel_imap_folder_start_idle that could happen even
	when idle was locked by an operation, causing hangs.

2008-11-18  Jose Dapena Paz  <jdapena@igalia.com>

	* Avoid criticals on calling can_idle if queue does not have service.

2008-11-17  Martin Bonnin  <martinbonnin@gmail.com>

	* libtinymail-camel/tny-camel-store-account.c: 2 small bugfixes in 
	tny_camel_store_account_store_refresh().
	- fix a reference leak
	- fix we were reporting the subfolders to the observer instead of 
	  just the folders

2008-11-18  Sergio Villar Senin  <svillar@igalia.com>

	* libtinymail-camel/tny-camel-folder.c: several bugfixes. Fixed an
	invalid comparison (a typo most likely). Fixed several memory
	leaks as well in some lists that were not freed.
	(load_folder_no_lock): removed a duplicated instruction.
	Added several initializations of cancelled field all around the
	code.
	(tny_camel_folder_copy_shared): removed needless code and fixed a
	memory leak.
	(tny_camel_folder_get_folders_default): fixed an useless asignment

	* libtinymail-camel/tny-camel-mime-part-priv.h: Moved a function
	header into the #ifdef

2008-11-13  Thomas Guillem  <thomas.guillem@gmail.com>

	* libtinymail-camel/camel-lite/camel/providers/imap/camel-imap-message-cache.c:
	Change the default cache filename from "uid." to "uid.~" in order to
	keep compatibility with FAT32 partitions. (a FAT32 file can't end with '.')
	Old cache files ("uid.") are still compatible.

2008-11-10  Jose Dapena Paz  <jdapena@igalia.com>

	Complete rework of the lock behavior of Tinymail
	(camel) imap IDLE implementation.
